--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -1,18 +1,62 @@
-.Book {
-	display: flex;
-	flex-direction: row;
-	width: 300px;
-	height: 300px;
-	margin: 10px;
-	border: 1px solid grey;
-	border-radius: 20px;
-	overflow: scroll;
+@use "./../../scss/palette";
 
-	img {
-		object-fit: contain;
-		width: 150px;
+.Book {
+	position: relative;
+	width: 175px;
+	height: 280px;
+	// min-height: ;
+	// border: 1px solid grey;
+	overflow: hidden;
+	// border-radius: 10px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	// background-color: rgb(57, 57, 57);
+
+	&__Thumb {
+		// text-align: center;
+		// width: width: minmax(175px, 1fr);
+		height: 100%;
+		// mix-blend-mode: multiply;
+		background-color: white;
+		// object-fit: contain;
 	}
 
 	&__Info {
+		position: absolute;
+		bottom: 0;
+		background: rgba(0, 0, 0, 0.5); /* Black see-through */
+		height: 100%;
+		transition: 0.5s ease;
+		opacity: 0;
+		color: white;
+		font-size: 16px;
+
+		overflow-y: scroll;
+
+		* {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+	}
+
+	&:hover {
+		.Book__Info {
+			opacity: 1;
+		}
+	}
+
+	&::-webkit-scrollbar {
+		width: 10px;
+
+		&-track {
+			background: rgba(palette.$alabaster, 0.5);
+		}
+
+		&-thumb {
+			background: palette.$ash-gray;
+		}
 	}
 }
