--- a/src/containers/BookGrid/BookGrid.module.scss
+++ b/src/containers/BookGrid/BookGrid.module.scss
@@ -1,25 +1,29 @@
 @use "./../../scss/palette";
+@use "./../../scss/sizing";
+
+.NoBooks {
+	text-align: center;
+	margin-top: 50px;
+}
 
 .BookGrid {
-	// display: flex;
-	// flex-wrap: wrap;
-
-	// // height: 80vh;
-	// overflow-y: scroll;
-	// overflow-x: hidden;
-	// min-height: 100%;
-	padding: 20px 0px;
+	padding: 20px 20px;
 	display: grid;
-	gap: 10px;
-	grid-template-columns: repeat(auto-fit, 175px);
+	column-gap: 20px;
+	row-gap: 30px;
+	grid-template-columns: repeat(auto-fit, 1.1 * sizing.$book-width);
+	grid-auto-rows: 1.1 * sizing.$book-height;
+
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
 
 	justify-content: center;
 	align-items: center;
 
 	// margin: 20px 0px 0px 0px;
 	// background: palette.$gradient-bottom;
-	background-color: rgba(palette.$alabaster, 1);
-	color: palette.$dark-text;
+	// background-color: rgba(palette.$alabaster, 1);
+	// color: palette.$dark-text;
 
 	&::-webkit-scrollbar {
 		width: 10px;
