--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,8 +1,17 @@
 @use "./../../scss/palette";
 @use "./../../scss/typography";
 
-.Header {
+.Logo {
 	text-align: center;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+	// margin: 10px;
+
+	@media only screen and (max-width: 845px) {
+		flex-direction: column;
+		align-items: center;
+	}
 
 	&__Heading {
 		@extend %raleway-font;
@@ -11,7 +20,7 @@
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 
-		font-size: 12vh;
+		font-size: 3rem;
 		font-weight: 500;
 		margin-top: 10px;
 		margin-bottom: 0px;
@@ -19,9 +28,9 @@
 
 	&__Subtitle {
 		color: palette.$light-text;
-		margin-top: 0px;
+		margin: 10px 20px;
 		text-align: right;
-		font-size: 2vh;
+		font-size: 1rem;
 		transition: 0.5s;
 	}
 }
