--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,19 +1,29 @@
 @use "./../../scss/palette";
 
 .SearchBar {
-	border: 1px solid rgba(palette.$spanish-gray, 1);
-	border-radius: 20px;
-	overflow: hidden;
-	height: min-content;
+	// border: 1px solid rgba(palette.$spanish-gray, 1);
+	// border-radius: 20px;
+	// overflow: hidden;
+	// height: min-content;
 	margin: 10px;
+
 	// visibility: hidden;
 
 	&:focus {
-		outline: white solid 1px;
+		// outline: white solid 1px;
 	}
 	// background-color: rgba(palette.$spanish-gray, 0.5);
 
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+
 	&__Input {
+		height: 1.5rem;
+		margin: 0px;
+		border-top-left-radius: 20px;
+		border-bottom-left-radius: 20px;
+
 		border-style: hidden;
 		outline: none;
 		padding: 5px;
@@ -40,6 +50,10 @@
 	}
 
 	&__Button {
+		height: 34px;
+		margin: 0px;
+		border-top-right-radius: 20px;
+		border-bottom-right-radius: 20px;
 		border: none;
 		background: linear-gradient(
 			270deg,
@@ -47,7 +61,7 @@
 			rgba(palette.$spanish-gray, 0.5)
 		);
 		// background-color: palette.$ash-gray;
-		padding: 6px;
+		// padding: 6px;
 		color: black;
 		cursor: pointer;
 
