Cleaned up code, created fetcher module

--- a/src/assets/scss/_palette.scss
+++ b/src/assets/scss/_palette.scss
@@ -3,7 +3,7 @@ $alabaster: rgba(224, 226, 219, 1);
 $timberwolf: rgba(210, 212, 200, 1);
 $ash-gray: rgba(184, 189, 181, 1);
 $spanish-gray: rgba(136, 150, 150, 1);
-$xanadu: rgb(76, 93, 90);
+$xanadu: rgba(76, 93, 90, 1);
 $light-text: rgb(239, 239, 239);
 $dark-text: rgb(68, 84, 81);
 
