--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
-@use "./../../scss/palette";
-@use "./../../scss/typography";
+@use "./../../assets/scss/palette";
+@use "./../../assets/scss/typography";
 
 .Header {
 	text-align: center;
