--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -1,17 +1,13 @@
-@use "./../../scss/palette";
-@use "./../../scss/sizing";
+@use "./../../assets/scss/palette";
+@use "./../../assets/scss/sizing";
+@use "./../../assets/scss/responsive";
 
 .Book {
-	position: relative;
-	width: sizing.$book-width;
-	height: sizing.$book-height;
-	// min-height: ;
-	// border: 1px solid grey;
 	overflow: hidden;
 	border-radius: 5px;
 
 	display: flex;
-	flex-direction: column;
+
 	justify-content: center;
 	align-items: center;
 
@@ -19,53 +15,109 @@
 
 	transition: 0.5s;
 
-	// background-color: rgb(57, 57, 57);
+	background-color: white;
+
+	&__AltThumb {
+		padding: 10px;
+		text-align: center;
+		width: sizing.$book-width;
+		z-index: 1;
+	}
 
 	&__Thumb {
-		// text-align: center;
-		// width: width: minmax(175px, 1fr);
+		z-index: 1;
 		height: 100%;
-		// mix-blend-mode: multiply;
-		background-color: white;
-		// object-fit: contain;
+
+		border-radius: 5px;
+		object-fit: cover;
+
+		box-shadow: 0px 0px 10px 5px rgba(palette.$xanadu, 0.5);
 	}
 
-	&__Info {
-		position: absolute;
-		bottom: 0;
-		background: rgba(0, 0, 0, 0.5); /* Black see-through */
-		height: 100%;
-		transition: 0.5s ease;
-		opacity: 0;
-		color: white;
-		font-size: 16px;
+	@include responsive.md-down {
+		flex-direction: column;
+		width: sizing.$book-width;
+		height: sizing.$book-height;
+		position: relative;
 
-		overflow-y: scroll;
+		&__Info {
+			text-align: center;
+			border-radius: inherit;
+			z-index: 1;
+			position: absolute;
+			bottom: 0;
+			background: rgba(0, 0, 0, 0.7);
+			width: 100%;
+			height: 100%;
+			transition: 0.5s ease;
+			opacity: 0;
+			color: white;
+			font-size: 12px;
 
-		* {
-			padding-left: 10px;
-			padding-right: 10px;
+			overflow-y: scroll;
+
+			> * {
+				padding: 0px 10px;
+			}
+
+			&::-webkit-scrollbar {
+				display: none;
+			}
+		}
+
+		&:hover {
+			width: 1.1 * sizing.$book-width;
+			height: 1.1 * sizing.$book-height;
+
+			.Book__Info {
+				opacity: 1;
+			}
 		}
 	}
 
-	&:hover {
-		width: 1.1 * sizing.$book-width;
-		height: 1.1 * sizing.$book-height;
+	@include responsive.md-up {
+		flex-direction: row;
+		width: sizing.$tile-width;
+		height: sizing.$book-height;
 
-		.Book__Info {
-			opacity: 1;
-		}
-	}
-
-	&::-webkit-scrollbar {
-		width: 10px;
-
-		&-track {
-			background: rgba(palette.$alabaster, 0.5);
+		&__Thumb {
+			width: sizing.$book-width;
 		}
 
-		&-thumb {
-			background: palette.$ash-gray;
+		&__Info {
+			height: 100%;
+			flex-grow: 1;
+			color: black;
+			padding: 0 10px;
+			position: relative;
+
+			&_Desc {
+				position: absolute;
+				bottom: 0;
+
+				width: 100%;
+				height: 100%;
+				transition: 0.5s ease;
+				opacity: 0;
+				color: white;
+				font-size: 16px;
+
+				overflow-y: scroll;
+				* {
+					padding-left: 10px;
+					padding-right: 10px;
+				}
+			}
+		}
+
+		&:hover {
+			width: sizing.$tile-hover-width;
+			height: 1.1 * sizing.$book-height;
+			background: rgba(0, 0, 0, 0.8);
+
+			.Book__Info_Desc {
+				opacity: 1;
+			}
 		}
 	}
 }
