--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -1,5 +1,5 @@
-@use "./../../scss/palette";
-@use "./../../scss/typography";
+@use "./../../assets/scss/palette";
+@use "./../../assets/scss/typography";
 
 .Home {
 	background-color: palette.$xanadu;
